crates/fig-parser/tests/snapshots/integration_tests__enums__explicit_values.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Default
      annotations: []
      name: Color
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: RED
          value:
            IntegerLiteral:
              base: Decimal
              digits: "0"
              suffix: ~
        - name: GREEN
          value:
            IntegerLiteral:
              base: Decimal
              digits: "1"
              suffix: ~
        - name: BLUE
          value:
            IntegerLiteral:
              base: Decimal
              digits: "2"
              suffix: ~
  - Enum:
      visibility: Default
      annotations: []
      name: HttpStatus
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: OK
          value:
            IntegerLiteral:
              base: Decimal
              digits: "200"
              suffix: ~
        - name: NOT_FOUND
          value:
            IntegerLiteral:
              base: Decimal
              digits: "404"
              suffix: ~
        - name: INTERNAL_SERVER_ERROR
          value:
            IntegerLiteral:
              base: Decimal
              digits: "500"
              suffix: ~
