crates/fig-parser/tests/snapshots/integration_tests__enums__mixed_values.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Default
      annotations: []
      name: Priority
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: LOW
          value:
            IntegerLiteral:
              base: Decimal
              digits: "0"
              suffix: ~
        - name: MEDIUM
          value: ~
        - name: HIGH
          value: ~
        - name: CRITICAL
          value:
            IntegerLiteral:
              base: Decimal
              digits: "100"
              suffix: ~
