crates/fig-parser/tests/snapshots/integration_tests__enums__simple.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Enum:
      visibility: Default
      annotations: []
      name: Direction
      representation: ~
      generic_params: []
      requires: []
      variants:
        - name: UP
          value: ~
        - name: DOWN
          value: ~
        - name: LEFT
          value: ~
        - name: RIGHT
          value: ~
